<resources>
    <string name="app_name">PROJECT</string>
    <string name="sign_out">Sign Out</string>
    <string name="todo">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_home">HOME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="events">Events</string>
    <string name="communicate">Communicate</string>
    <string name="holidays">Holidays</string>
    <string name="default_notification_channel_id">hello</string>
    <string name="cont1inue">CONTINUE</string>
    <string name="time_table">Time Table</string>

    <string-array name="branch">
        <item>---</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>ISE</item>
        <item>ME</item>
        <item>ETE</item>
        <item>EEE</item>
        <item>AI&amp;ML</item>
        <item>CE</item>
        <item>MCA</item>
    </string-array>

    <string-array name="year">
        <item>---</item>
        <item>1st YEAR</item>
        <item>2nd YEAR</item>
        <item>3rd YEAR</item>
        <item>4th YEAR</item>
    </string-array>

    <string-array name="section">
        <item>---</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
</resources>
