<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/sign_out" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_in"
        android:text="@string/sign_in"
        android:layout_centerInParent="true"
        android:layout_below="@+id/user_image"/>

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_continue"
        android:text="@string/cont1inue"
        android:onClick=""
        android:layout_centerInParent="true"
        android:layout_above="@+id/btn_sign_out"
        android:layout_below="@+id/btn_sign_in"
        android:visibility="gone"
        tools:ignore="OnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details"
        android:visibility="gone"
        android:layout_above="@+id/btn_continue"
        android:layout_centerInParent="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/profile"
        android:visibility="gone"
        android:layout_above="@+id/details"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo" />

</RelativeLayout>
